--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,32 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+header{
+    width:100%;
+    margin-left:auto;
+    margin-right:auto;
+    display:flex;
+}  
+.header-links a{
+    color:black;
+    text-decoration: none;
+} 
+header nav{
+    width:50%;
+    font-size: 14px;
+    margin-left:auto;
+    margin-right:auto;
+    display:flex;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.top-image{
+    display:flex;
+    justify-content: center;
+    margin-bottom:20px;
+}
 body {
 	line-height: 1;
 }
@@ -111,7 +137,36 @@ p {
     align-items: center;
     justify-content: center;
 }
-
+#B1{
+    background-color: teal;
+}
+#B2{
+    background-color: gold;
+}
+#B3{
+    background-color: cadetblue;
+}
+#B4{
+    background-color: coral;
+}
+#B5{
+    background-color: crimson;
+}
+#B6{
+    background-color: forestgreen;
+}
+#B7{
+    background-color: darkorchid;
+}
+#B8{
+    background-color: hotpink;
+}
+#B9{
+    background-color: indigo;
+}
+#B10{
+    background-color: dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
